refactor(cheques): dashboards, notifications, contracts and imports read the register
Every remaining reader of the payment schedule now reads cheques. The
schedule table itself stays until Task 12; nothing outside that deletion
list points at it any more.

The dashboard stopped walking every schedule row in Java for four money
tiles: the status totals, "expected this month" and cash banked are
aggregates now, and overdue is ChequeDueRules over the due rows with each
lease's grace rather than "past its date". The UAE-timezone month
correction is gone with it — clearedAt is a date, so the day the money
landed is already the landlord's local day.

The reminder job was loading the whole table once per configured offset;
it asks for the instruments maturing on each date instead, and its
overdue pass respects grace. It reads the register and never moves a row
through it: lateness invented as a status is how the register and the
ledger came to disagree.

Section 4 of the contract has been empty since Task 4 and now prints the
lease's own instruments — the draft grid for a contract being drafted,
every live row otherwise, in the register's own order so the booking
cheque and the deposit stay below the instalments they were agreed
alongside rather than jumping to the top of a date sort.

LeaseExpirationJob no longer cancels anything. A held, undeposited cheque
for the final month is an instrument against a debt the renter owes, and
a lease reaching its end date does not settle it; what happens to
uncleared paper is the termination and settlement flow's decision, where
a human is looking at the contract. terminateLease stops cancelling for
the same reason.

The portfolio import finally keeps what the Cheques sheet says. Its rows
and the booking-deposit columns become register rows through
ChequeGenerationService, so the shared row rules apply, and the two "not
imported" warnings are gone. A lease with no sheet gets its grid
generated from its payment terms. Rows that break t